--- a/xooffer/bower.json
+++ b/xooffer/bower.json
@@ -25,6 +25,7 @@
     "angular-slick": "^0.2.1",
     "angular-material": "^1.1.3",
     "angular-drag-and-drop-lists": "^2.1.0",
-    "jquery-ui": "^1.12.1"
+    "jquery-ui": "^1.12.1",
+    "angular-jwt": "^0.1.9"
   }
 }
