--- a/xooffer/bower.json
+++ b/xooffer/bower.json
@@ -26,6 +26,7 @@
     "angular-material": "^1.1.3",
     "angular-drag-and-drop-lists": "^2.1.0",
     "jquery-ui": "^1.12.1",
-    "angular-jwt": "^0.1.9"
+    "angular-jwt": "^0.1.9",
+    "angular-resource": "1.6.1"
   }
 }
